--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "sphinx>=7.3.7",
     "sphinx-design>=0.5.0",
     "sphinxawesome-theme>=5.2.0",
-    "myst-nb>=4.0.0"
+    "myst-parser>=4.0.0"
 ]
 
 [project.urls]
